Ret-3697. Change status of applications when claimant responds to respondent (#379)
* When claimant responds to respondent's application, set status to waitingForTheTribunal

* Add test

* Update test to include more appropriate data

* Update application state request for a claimant viewing an application
Also added testing around finding an application by its id

* Add empty document list if doesn't exist

* Clean test code

* Clean imports

* Fix PMD